objects/cwbtool__FieldTrack__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__Filter__c</fullName>
        <label>Filter</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__LastAnalyzeOn__c</fullName>
        <label>Last Analyze On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cwbtool__ObjectLabel__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Records__c</fullName>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__TotalField__c</fullName>
        <label>Total Field</label>
        <summaryForeignKey>cwbtool__FieldAnalysis__c.cwbtool__ObjectAnalysis__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cwbtool__TotalFields__c</fullName>
        <label>Total Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Field Track</label>
    <listViews>
        <fullName>cwbtool__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>